--- a/helm-chart/templates/components.yaml
+++ b/helm-chart/templates/components.yaml
@@ -133,10 +133,11 @@ spec:
       containers:
       - args:
         - --cert-dir=/tmp
-        - --secure-port=10250
+        - --secure-port=4443
         - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
         - --kubelet-use-node-status-port
-        - --metric-resolution=15s
+        - --metric-resolution=60s
+        - --kubelet-insecure-tls
         image: registry.k8s.io/metrics-server/metrics-server:v0.7.1
         imagePullPolicy: IfNotPresent
         livenessProbe:
@@ -148,7 +149,7 @@ spec:
           periodSeconds: 10
         name: metrics-server
         ports:
-        - containerPort: 10250
+        - containerPort: 4443
           name: https
           protocol: TCP
         readinessProbe:
@@ -157,8 +158,8 @@ spec:
             path: /readyz
             port: https
             scheme: HTTPS
-          initialDelaySeconds: 20
-          periodSeconds: 10
+          initialDelaySeconds: 100
+          periodSeconds: 40
         resources:
           requests:
             cpu: 100m
